@@ -1,3 +1,8 @@
+2006-04-30 svu
+
+	* autogen.sh: fail on autoconf/automake errors,
+	thanks to Thomas Stichele
+
 2006-04-22 svu
 
 	* libxklavier/*.c:
